<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="444dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_surface"
            android:hint="@string/hint_username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="false"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:text="@string/btn_login"
            app:backgroundTint="#00FFFFFF"
            app:backgroundTintMode="add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="40dp"
            android:text="@string/btn_login_fb"
            app:backgroundTint="#00FFFFFF"
            app:backgroundTintMode="add"
            app:icon="@drawable/ic_welcome_fb_login"
            app:iconPadding="0dp" />

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="33dp"
            android:layout_marginTop="10sp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="226dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/reg"
                android:textAlignment="textEnd"
                android:textColor="#808284"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="57dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="Register"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:backgroundTintMode="src_in"
                app:iconPadding="0dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="144dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/desr_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/ic_welcome_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>